--- a/public/404.html
+++ b/public/404.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL=./index.html" />
+    <meta charset="utf-8">
+    <title>Page Not Found</title>
+    <script type="text/javascript">
+      // Redirect to the index page (main route) to let React Router handle it
+      var pathname = window.location.pathname;
+      var redirectUrl = window.location.origin + "/eproject" + pathname;
+      window.location.replace(redirectUrl);
+    </script>
   </head>
   <body>
+    <h1>404 - Page Not Found</h1>
+    <p>Redirecting...</p>
   </body>
 </html>
